test/files/neg/plugin-before-parser/lib/plugins.jar.desired.sha1
755fb75a6c635ca586f79e05c2785d55e52021cf ?plugins.jar
